Basic style implementation of breadcrumb (and related elements)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,6 +49,7 @@
 @import "modules/type-results";
 @import "modules/result-order";
 @import "modules/top-bar";
+@import "modules/breadcrumbs";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
