--- a/app/views/layouts/partials/_top_bar.slim
+++ b/app/views/layouts/partials/_top_bar.slim
@@ -23,7 +23,10 @@
                 | Startseite
 
       .nav-lang
-        button.nav-lang__button[aria-label="Switch language"]
+        - if I18n.locale == :de
+          button.nav-lang__button[aria-label="Switch language"]
+        - else
+          button.nav-lang__button[aria-label="Switch language" title="#{t 'layouts.partials.nav_lang.title'}"]
         ul.nav-lang__list
           - I18n.available_locales.each do |locale|
             - active = I18n.locale == locale ? 'nav-lang__listitem--active' : ''
