--- a/app/views/layouts/partials/_top_bar.slim
+++ b/app/views/layouts/partials/_top_bar.slim
@@ -1,37 +1,32 @@
 .top-bar
-    .top-bar__container
-      / @TodoBeforePR: Labels i18n, href, also logic replacing XXX
-      a.top-bar__world-link[href="#"] ‹ zurück zu XXXXXX
-      .top-bar__world-select
-        button.top-bar__world-select-button#top-bar__world-select-button[aria-label="Switch to other clarat section" aria-expanded="false"]
-        .top-bar__world-select-overlay[aria-hidden="true"]
-          ul.top-bar__world-list
-            li.top-bar__world-list-item.top-bar__world-list-item--otherworld
-              / @TodoBeforePR: Labels i18n, href, also logic replacing XXX and YYY
-              a.top-bar__world-list-link--otherworld[href="#"]
-                | zu
-                | &nbsp;
-                span.top-bar__emphasis XXXXXXX
-                | &nbsp;
-                | wechseln
-            li.top-bar__world-list-item.top-bar__world-list-item--worldhome
-              a.top-bar__world-list-link--worldhome[href="#"]
-                | zur
-                | &nbsp;
-                span.top-bar__emphasis YYYYYYY
-                | &nbsp;
-                | Startseite
+  .top-bar__container
+    - inverse_section = (@current_section == 'family') ? 'refugees' : 'family'
+    = link_to home_path(section: inverse_section),
+              class: 'top-bar__world-link' do
+      = t (".section_link.desktop.#{@current_section}")
+    .top-bar__world-select
+      button.top-bar__world-select-button#top-bar__world-select-button[aria-label="Switch to other clarat section" aria-expanded="false"]
+      .top-bar__world-select-overlay[aria-hidden="true"]
+        ul.top-bar__world-list
+          li.top-bar__world-list-item.top-bar__world-list-item--otherworld
+            = link_to home_path(section: inverse_section),
+                      class: 'top-bar__world-list-link--otherworld' do
+              == t (".section_link.mobile.switch.#{@current_section}")
+          li.top-bar__world-list-item.top-bar__world-list-item--worldhome
+            = link_to home_path(section: @current_section),
+                      class: 'top-bar__world-list-link--worldhome' do
+              == t (".section_link.mobile.home.#{@current_section}")
 
-      .nav-lang
-        - if I18n.locale == :de
-          button.nav-lang__button[aria-label="Switch language"]
-        - else
-          button.nav-lang__button[aria-label="Switch language" title="#{t 'layouts.partials.nav_lang.title'}"]
-        ul.nav-lang__list
-          - I18n.available_locales.each do |locale|
-            - active = I18n.locale == locale ? 'nav-lang__listitem--active' : ''
-            li = link_to t(".languages.#{locale}"), {locale: locale.to_s}, class: active
-        = link_to 'http://translate.google.com', target: '_blank',
-                                                 class: 'nav-lang__google' do
-          = image_tag 'banner--translated-by-google.svg',
-                      alt: 'Translated by Google'
+    .nav-lang
+      - if I18n.locale == :de
+        button.nav-lang__button[aria-label="Switch language"]
+      - else
+        button.nav-lang__button[aria-label="Switch language" title="#{t 'layouts.partials.nav_lang.title'}"]
+      ul.nav-lang__list
+        - I18n.available_locales.each do |locale|
+          - active = I18n.locale == locale ? 'nav-lang__listitem--active' : ''
+          li = link_to t(".languages.#{locale}"), {locale: locale.to_s}, class: active
+      = link_to 'http://translate.google.com', target: '_blank',
+                                               class: 'nav-lang__google' do
+        = image_tag 'banner--translated-by-google.svg',
+                    alt: 'Translated by Google'
