add environment-specific favicons

--- a/app/views/layouts/partials/_head.html.slim
+++ b/app/views/layouts/partials/_head.html.slim
@@ -44,7 +44,7 @@ link( rel="icon"
       sizes="96x96")
 link( rel="icon"
       type="image/png"
-      href="/favicons/favicon-32x32.png"
+      href="/favicons/favicon--#{Rails.env}-32x32.png"
       sizes="32x32")
 link( rel="icon"
       type="image/png"
