Hotfix for #957: distorted stage image in FF

--- a/app/assets/stylesheets/modules/_section-choice.scss
+++ b/app/assets/stylesheets/modules/_section-choice.scss
@@ -14,7 +14,7 @@
   display: inherit;
   padding-top: 32%;
   background: no-repeat center top;
-  background-size: 439px 170px;
+  background-size: auto 100%;
 }
 
 .section-choice__stage--family {
