--- a/app/views/layouts/partials/_javascript_config.html.slim
+++ b/app/views/layouts/partials/_javascript_config.html.slim
@@ -6,7 +6,7 @@ javascript:
     Algolia: {
       appID: "#{Rails.application.secrets.algolia['app_id']}",
       apiKey: "#{Rails.application.secrets.algolia['pub_key']}",
-      personalIndexName: "#{Offer.personal_index_name(I18n.locale)}",
-      remoteIndexName: "#{Offer.remote_index_name(I18n.locale)}"
+      personalIndexName: "#{IndexChoice.personal}",
+      remoteIndexName: "#{IndexChoice.remote}"
     }
   };
