add more and better env-dependent favicons

--- a/app/views/layouts/partials/_head.html.slim
+++ b/app/views/layouts/partials/_head.html.slim
@@ -48,7 +48,7 @@ link( rel="icon"
       sizes="32x32")
 link( rel="icon"
       type="image/png"
-      href="/favicons/favicon-16x16.png"
+      href="/favicons/favicon--#{Rails.env}-16x16.png"
       sizes="16x16")
 link rel="manifest" href="/favicons/android-chrome-manifest.json"
 meta name="msapplication-TileColor" content="#f4b528"
