Add some site-wide accessibility improvements

--- a/app/views/layouts/partials/_offcanvas.html.slim
+++ b/app/views/layouts/partials/_offcanvas.html.slim
@@ -1,6 +1,6 @@
 #off-canvas-container.off-canvas-container
   .off-canvas-container__top
-    button.off-canvas-container__trigger.off-canvas-container__trigger--within-oc
+    button.off-canvas-container__trigger.off-canvas-container__trigger--within-oc aria-label="Back to results"
       span.off-canvas-container__result-text
     button.off-canvas-container__close.off-canvas-container__trigger aria-label="Close" ×
   .off-canvas-container__content
