Feature/931 new world startpages (#956)
* Basic implementation of new "world-less" header

* Finish on desktop, mediaquery XL: select, type select

* WIP: Select for sort in offer index/search results

* for #836 - reimplement working sort_order

* for #836 - implement contact type switch

* (Work in progress - switching computers)

* Basic implementation of mobile logo function

* Standardize arrow images in mobile header

* Improve arrow in mobile lang selection in header

* Move map to off canvas or back to sidebar

* Basic implementation of select repositioning, branch will be re-assigned

* Remove console.logs

* (Work in progress, changing computers)

* Basic styling of new world start

* Revert "Basic implementation of select repositioning, branch will be re-assigned"

This reverts commit 2f8f03f674eb8512cab31a4c3e981c85e465ce03.

# Conflicts:
#	app/assets/javascripts/handle_mobile_layout/presenter.coffee

* Add icons to improved "off canvas nav"

* Fix missing gap between header and content on mobile

* Tweak "3 icons" trigger in breakpoint s & m

* Fix filter-form visibility toggle on desktop

* Fix and optimize map-moving between sidebar and off canvas

* for #931 - hide/show sort dropdown for remote/personal

* Basic style implementation of breadcrumb (and related elements)

* for #931 - show/hide personal controls

* Add "welcome tooltips" regarding automated translations

* Fix last commit, include Konstantins approach

* Small fixes for rtl/arabic

* for #931 - i18n & link logic

* Fix display of tab3 in off canvas navigation

* Fix wrong appearance of sort order when scaling up from off canvas

* Trigger resize for movement of map between aside and off canvas

* Can't reproduce local, but hoppefully fixing position of remove-x in mediaquery m

* for #931 - show query for all search_results

* For #931: Remove invalid character that irrititates some browsers

* For #931: Don't show 

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,11 @@
 @import "modules/tablist";
 @import "modules/hint";
 @import "modules/section-choice";
+@import "modules/type-results";
+@import "modules/result-order";
+@import "modules/top-bar";
+@import "modules/breadcrumbs";
+
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
 @import "modules/sections/section-offer";
@@ -63,6 +68,7 @@
 @import "navigation/nav-legal";
 @import "navigation/nav-welt";
 @import "navigation/nav-lang";
+@import "navigation/nav-off-canvas-trigger";
 
 @import "vendor/pagination";
 
