--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -31,6 +31,7 @@
   @extend %layout-col-69;
 
   &.content-main--section_choice {
+    -js-display: flex;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,7 +39,7 @@
 
   &.content-main--wide {
     float: none;
-    margin: 25px auto 0;
+    margin: 60px auto 0;
     padding: 0;
     width: 100%;
   }
@@ -48,6 +49,7 @@
     width: 100%;
     float: none;
     padding-left: calc(31% + 2px);
+    padding-top: 0;
 
     body.ar & {
       padding-right: calc(31% + 2px);
