--- a/app/views/layouts/partials/_offcanvas.html.slim
+++ b/app/views/layouts/partials/_offcanvas.html.slim
@@ -1,11 +1,19 @@
 #off-canvas-container.off-canvas-container
   .off-canvas-container__top
-    button.off-canvas-container__trigger.off-canvas-container__trigger--within-oc
+    button.off-canvas-container__trigger.off-canvas-container__trigger--within-oc aria-label="Back to results"
       span.off-canvas-container__result-text
     button.off-canvas-container__close.off-canvas-container__trigger aria-label="Close" ×
   .off-canvas-container__content
     ul.tablist role="tablist"
-      li#tab1.tablist__tab.is-active aria-controls="tab_filter" aria-selected="true" role="tab" tabindex="0"  Filter
-      li#tab2.tablist__tab aria-controls="tab_categories" aria-selected="false" role="tab" tabindex="0"  Kategorien
+      li#tab1.tablist__tab.is-active aria-controls="tab_filter" aria-selected="true" role="tab" tabindex="0"
+        i.fa.fa-filter.tablist__icon aria-hidden='true'
+        = t 'js.search.tabs.filter'
+      li#tab2.tablist__tab aria-controls="tab_categories" aria-selected="false" role="tab" tabindex="0"
+        i.fa.fa-tags.tablist__icon aria-hidden='true'
+        = t 'js.search.tabs.categories'
+      li#tab3.tablist__tab aria-controls="tab_map" aria-selected="false" role="tab" tabindex="0"
+        i.fa.fa-map-marker.tablist__icon aria-hidden='true'
+        = t 'js.search.tabs.map'
     #tab_filter.tablist__panel aria-hidden="false" aria-labelledby="tab1" role="tabpanel"
     #tab_categories.tablist__panel.is-hidden aria-hidden="true" aria-labelledby="tab2" role="tabpanel"
+    #tab_map.tablist__panel.is-hidden aria-hidden="true" aria-labelledby="tab3" role="tabpanel"
