Feature/786 listing offers on orga show (#964)
* Fix Google logo

* Fix for #786

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -720,6 +720,11 @@
 
   .Listing-results__orga-display {
     padding-top: 4px;
+    padding-bottom: 4px;
+  }
+
+  .Listing-results__location {
+    padding: 0 0 4px 6px;
   }
 
   .section-team__member {
