--- a/app/views/pages/impressum.html.slim
+++ b/app/views/pages/impressum.html.slim
@@ -4,10 +4,12 @@
   main.content-main.content-main--wide
     .wrapper-inner
 
-      .hint.hint--imprint
-        .hint__icon.hint__icon--info
-          i.fa.fa-info-circle
-        = t '.notice'
+      - if I18n.locale != :de
+        .hint.hint--imprint
+          .hint__icon.hint__icon--info
+            i.fa.fa-info-circle
+          // = t '.notice'
+          | Rechtstexte kannst du bei uns nur auf Deutsch lesen.
 
       h1 = t '.heading'
 
