--- a/app/views/pages/impressum.html.slim
+++ b/app/views/pages/impressum.html.slim
@@ -8,8 +8,7 @@
         .hint.hint--imprint
           .hint__icon.hint__icon--info
             i.fa.fa-info-circle
-          // = t '.notice'
-          | Rechtstexte kannst du bei uns nur auf Deutsch lesen.
+          = t '.notice'
 
       h1 = t '.heading'
 
