--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -230,6 +230,7 @@
       width: 40px;
       background-size: 60%;
       bottom: 10px;
+      z-index: 400;
       height: auto;
 
       body.template--pages-home.ar & {
