--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -407,7 +407,12 @@
   // Content ######################################
 
   .wrapper-inner {
-    padding: 0 15px;
+    padding: 15px 15px 0;
+
+    .template--pages-home &,
+    .template--offers-index & {
+      padding-top: 0;
+    }
 
     .content-main > & {
       padding: 15px;
