--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -19,7 +19,7 @@
         .section-content__body.section-content--what
           == translation_block @organization.translation_automated? do
             == @organization.description
-      - if @organization.offers.approved.any?
+      - if @organization.offers.visible_in_frontend.any?
         section.section-content.section-content--alloffers
           h3.section-content__title
             = t '.offers_all'
@@ -27,11 +27,11 @@
           .section-content__body.section-content__body--offers-of-orga
             - SectionFilter.all.each do |section|
 
-              - unless @organization.offers.approved.in_section(section.identifier).empty?
+              - unless @organization.offers.visible_in_frontend.in_section(section.identifier).empty?
                 h4.Listing-results__headline--world = t ".headline-offers--#{section.identifier}"
 
                 ul.Listing-results__list class="Listing--#{section.identifier}"
-                  - @organization.offers.approved.in_section(section.identifier).order('name ASC').each do |offer|
+                  - @organization.offers.visible_in_frontend.in_section(section.identifier).order('name ASC').each do |offer|
                     li.Listing-results__listitem
 
                       h5.Listing-results__offer.Listing-results__orga-display = link_to offer.name, offer_path(id: offer),
