Implement #936 by using existing coffescript modules

--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -162,7 +162,7 @@
     min-height: 58px;
     max-height: 98px;
     width: auto;
-
+    overflow: visible;
 
     body.ar & {
       padding: 10px 15px 0 0;
