--- a/app/views/layouts/partials/_modal.html.slim
+++ b/app/views/layouts/partials/_modal.html.slim
@@ -1,3 +1,3 @@
 .JS-modal id=selector data=options
-  button class="#{selector}_close modal__close" X
+  button class="#{selector}_close" X
   = capture(&block)
